# Onichan-bot

./: .gitattributes  .gitignore  .replit  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  replit.nix
.agents/: agent_assets_metadata.toml
artifacts/api-server/: package.json
artifacts/onichan-bot/: index.html  package.json  vite.config.ts
attached_assets/: _1776597027268.env  auto_hitter_1778855261712.py  message_1781008558221.txt  n_lookup_1779006787171.py  shopify_1777117109757.py  tg_lookup_1779006787092.py
data/: admin_permissions.json  approved_cards.txt  approved_log.txt  ban.txt  check_log.txt  crypto_pending.txt  free.txt  gate_status.json  invoices.txt  owner.txt  paid.txt  payments.txt  pending.txt  premium.txt  premium_keys.txt  redeemed_keys.txt  settings.txt  user_configs.json  user_credentials.json
scripts/: build-extension.js  start-all.sh  start-bot.sh
src/: animated_emojis.json  bot.py  browser_blocklist.txt  browser_chrome_pool.py  browser_routes.py  config.py  keep_alive.py  lib_wallet_tokens.py  lucko_routes.py  market_routes.py  production_start.py  scraper_session.session
src/data/: premium.txt  proxies.json  saved_bins.json
src/modules/: account_creator.py  approved_cards_logger.py  ast_gate.py  auto_hitter.py  b3_gate.py  b3n_gate.py  bin_lookup.py  bin_shop.py  binance_pay.py  braintree_gate.py  casino.py  casino_routes.py  cc_cleaner.py  cc_generator.py  cc_killer.py  cc_shop.py  chain_config.py  chatgpt.py  (+55 more)
tests/: browser_pro.spec.js  browser_tabs.spec.js  test_browser_pro.py  test_browser_tabs.py
(+57 files in other folders)
