[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "bip-utils>=2.12.0",
    "eth-account>=0.13.0",
    "cloudscraper>=1.2.71",
    "cryptography>=46.0.7",
    "curl-cffi>=0.15.0",
    "faker>=40.15.0",
    "flask>=3.1.3",
    "flask-compress>=1.24",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.11",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[all]>=22.7",
    "pytonlib>=0.0.70",
    "qrcode>=8.2",
    "requests>=2.33.1",
    "tls-client>=1.0.1",
    "tronpy>=0.6.2",
    "twilio>=9.0.0",
    "waitress>=3.0.2",
    "yt-dlp>=2026.3.17",
]
